data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3353.wast
;; 2. Implement a loop that uses `br_if` to conditionally exit based on a stack value. Ensure the function index is invalid during exit conditions. The differential behavior will be shown if the WebAssembly implementation handles the invalid index error, whereas the `wizard_engine` may incorrectly proceed, resulting in an infinite loop.

(assert_invalid
  (module
    (func $loop_with_invalid_call
      (loop
        (call 999)
        (br_if 0 (i32.const 0))
      )
    )
  )
  "unknown function"
)